added json view for vault management

--- a/packages/code-space-mfe/src/components/vaultManagement/VaultManagement.scss
+++ b/packages/code-space-mfe/src/components/vaultManagement/VaultManagement.scss
@@ -131,7 +131,7 @@
    }
    .copyBtn{
     display: flex;
-    justify-content:space-between;
+    justify-content:flex-end;
     height: 30px;
     margin-top: -10px;
     
