manual start changes

--- a/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -326,6 +326,14 @@
       text-decoration: none;
     }
   }
+
+  .manualStart { 
+    display: flex;
+    justify-content: space-between;
+    > div {
+      width: calc(50% - 30px);
+    }
+  }
   
   @keyframes OpenNewTab {
     0% {
