--- a/packages/frontend/src/components/mbc/aliceRoleRequest/AliceRoleRequest.scss
+++ b/packages/frontend/src/components/mbc/aliceRoleRequest/AliceRoleRequest.scss
@@ -38,7 +38,7 @@
       }
     
       .roleName {
-        width: 300px;
+        width: calc(50% - 9px);
         margin-right: 20px;
       }
     
